--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>mpyw</title>
-    <meta http-equiv="refresh" content="0; URL=https://twitter.com/mpyw">
+    <script charset="utf-8">
+      location.href = "https://twitter.com/mpyw";
+    </script>
   </head>
   <body>
-    <a href="https://twitter.com/mpyw">Jump!</a>
+    <a href="https://twitter.com/mpyw">ホモはせっかち</a>
   </body>
 </html>
